@@ -10,7 +10,6 @@ package org.sosy_lab.cpachecker.cfa.blocks;
 
 import com.google.common.collect.Iterables;
 import com.google.common.collect.LinkedHashMultimap;
-import com.google.common.collect.Lists;
 import com.google.common.collect.Multimap;
 import java.io.IOException;
 import java.io.Writer;
@@ -32,7 +31,6 @@ import org.sosy_lab.cpachecker.cfa.model.CFANode;
 import org.sosy_lab.cpachecker.cfa.model.FunctionCallEdge;
 import org.sosy_lab.cpachecker.cfa.model.FunctionReturnEdge;
 import org.sosy_lab.cpachecker.cfa.model.FunctionSummaryEdge;
-import org.sosy_lab.cpachecker.util.CFAUtils;
 
 /** This Writer can dump a CFA with blocks into a file. */
 public class BlockToDotWriter {
@@ -96,9 +94,9 @@ public class BlockToDotWriter {
     final Multimap<Block, Block> hierarchy = LinkedHashMultimap.create();
     while (!sortedBlocks.isEmpty()) {
       // get the smallest block and then the smallest outer block, that contains it
-      Block currentBlock = sortedBlocks.remove(sortedBlocks.size() - 1); // get the smallest block,
+      Block currentBlock = sortedBlocks.removeLast(); // get the smallest block,
       for (Block possibleOuterBlock :
-          Lists.reverse(sortedBlocks)) { // order is important, smallest first
+          sortedBlocks.reversed()) { // order is important, smallest first
         // trick: we know, iff one node is contained in outer block, all nodes must be contained. So
         // we check only one.
         if (possibleOuterBlock.getNodes().contains(currentBlock.getNodes().iterator().next())) {
@@ -144,7 +142,7 @@ public class BlockToDotWriter {
     for (CFANode node : block.getNodes()) {
       if (finished.add(node)) {
         app.append(formatNode(node));
-        Iterables.addAll(edges, CFAUtils.leavingEdges(node));
+        Iterables.addAll(edges, node.getLeavingEdges());
         FunctionSummaryEdge func = node.getEnteringSummaryEdge();
         if (func != null) {
           edges.add(func);
