@@ -200,7 +200,8 @@ class CFAFunctionBuilder extends ASTVisitor {
       Sideassignments pSideAssignmentStack,
       CheckBindingVisitor pCheckBinding,
       ImmutableMap.Builder<CFANode, Set<AVariableDeclaration>> pCfaNodeToAstLocalVariablesInScope,
-      ImmutableMap.Builder<CFANode, Set<AParameterDeclaration>> pCfaNodeToAstParametersInScope) {
+      ImmutableMap.Builder<CFANode, Set<AParameterDeclaration>> pCfaNodeToAstParametersInScope,
+      Set<FileLocation> pUnhandledAtomicOccurrences) {
     options = pOptions;
     logger = pLogger;
     shutdownNotifier = pShutdownNotifier;
@@ -213,7 +214,8 @@ class CFAFunctionBuilder extends ASTVisitor {
             pParseContext,
             pMachine,
             staticVariablePrefix,
-            pSideAssignmentStack);
+            pSideAssignmentStack,
+            pUnhandledAtomicOccurrences);
     parseContext = pParseContext;
     checkBinding = pCheckBinding;
     binExprBuilder = new CBinaryExpressionBuilder(pMachine, pLogger);
@@ -263,7 +265,7 @@ class CFAFunctionBuilder extends ASTVisitor {
     // so all unnecessary nodes are only reachable with BACKWARD-search.
     // we only disconnect them from the CFA and let garbage collection do the rest
     for (CFANode node : cfaNodes) {
-      for (CFAEdge edge : CFAUtils.enteringEdges(node).toList()) {
+      for (CFAEdge edge : node.getEnteringEdges().toList()) {
         if (!cfaNodes.contains(edge.getPredecessor())) {
           CFACreationUtils.removeEdgeFromNodes(edge);
         }
@@ -312,24 +314,23 @@ class CFAFunctionBuilder extends ASTVisitor {
       // we should blacklist declarations in places we don't want, so for now I choose the latter
       // because the change has less impact.
       return PROCESS_SKIP;
-
-    } else if (declaration instanceof IASTSimpleDeclaration iASTSimpleDeclaration) {
-      return handleSimpleDeclaration(iASTSimpleDeclaration);
-
-    } else if (declaration instanceof IASTFunctionDefinition iASTFunctionDefinition) {
-      return handleFunctionDefinition(iASTFunctionDefinition);
-
-    } else if (declaration instanceof IASTProblemDeclaration iASTProblemDeclaration) {
-      visit(iASTProblemDeclaration.getProblem());
-      return PROCESS_SKIP;
-
-    } else if (declaration instanceof IASTASMDeclaration) {
-      return ignoreASMDeclaration(declaration);
-
-    } else {
-      throw parseContext.parseError(
-          "Unknown declaration type " + declaration.getClass().getSimpleName(), declaration);
     }
+
+    return switch (declaration) {
+      case IASTSimpleDeclaration decl -> handleSimpleDeclaration(decl);
+
+      case IASTFunctionDefinition func -> handleFunctionDefinition(func);
+
+      case IASTProblemDeclaration problemDeclaration -> {
+        visit(problemDeclaration.getProblem());
+        yield PROCESS_SKIP;
+      }
+      case IASTASMDeclaration asm -> ignoreASMDeclaration(declaration);
+
+      default ->
+          throw parseContext.parseError(
+              "Unknown declaration type " + declaration.getClass().getSimpleName(), declaration);
+    };
   }
 
   /**
@@ -634,52 +635,55 @@ class CFAFunctionBuilder extends ASTVisitor {
     }
 
     // Handle each kind of expression
-    if (statement instanceof IASTCompoundStatement) {
-      ASTNodeProperty property = statement.getPropertyInParent();
-      if (property == IGNUASTCompoundStatementExpression.STATEMENT) {
-        // IGNUASTCompoundStatementExpression content is already handled
-        return PROCESS_SKIP;
-      } else if (property == IASTCompoundStatement.NESTED_STATEMENT) {
-        blockStarts.push(locStack.peek());
+    switch (statement) {
+      case IASTCompoundStatement compoundStatement -> {
+        ASTNodeProperty property = statement.getPropertyInParent();
+        if (property == IGNUASTCompoundStatementExpression.STATEMENT) {
+          // IGNUASTCompoundStatementExpression content is already handled
+          return PROCESS_SKIP;
+        } else if (property == IASTCompoundStatement.NESTED_STATEMENT) {
+          blockStarts.push(locStack.peek());
+        }
+        scope.enterBlock();
+        // Do nothing, just continue visiting
       }
+      case IASTExpressionStatement iASTExpressionStatement ->
+          handleExpressionStatement(iASTExpressionStatement, fileloc);
+      case IASTIfStatement iASTIfStatement -> handleIfStatement(iASTIfStatement, fileloc);
+      case IASTWhileStatement iASTWhileStatement ->
+          handleWhileStatement(iASTWhileStatement, fileloc);
+      case IASTForStatement iASTForStatement -> {
+        return handleForStatement(iASTForStatement, fileloc);
+      }
+      case IASTBreakStatement iASTBreakStatement ->
+          handleBreakStatement(iASTBreakStatement, fileloc);
+      case IASTContinueStatement iASTContinueStatement ->
+          handleContinueStatement(iASTContinueStatement, fileloc);
+      case IASTLabelStatement iASTLabelStatement ->
+          handleLabelStatement(iASTLabelStatement, fileloc);
+      case IASTGotoStatement iASTGotoStatement -> handleGotoStatement(iASTGotoStatement, fileloc);
+      case IASTReturnStatement iASTReturnStatement ->
+          handleReturnStatement(iASTReturnStatement, fileloc);
+      case IASTSwitchStatement iASTSwitchStatement -> {
+        return handleSwitchStatement(iASTSwitchStatement, fileloc);
+      }
+      case IASTCaseStatement iASTCaseStatement -> handleCaseStatement(iASTCaseStatement, fileloc);
+      case IASTDefaultStatement iASTDefaultStatement ->
+          handleDefaultStatement(iASTDefaultStatement, fileloc);
 
-      scope.enterBlock();
-      // Do nothing, just continue visiting
-    } else if (statement instanceof IASTExpressionStatement iASTExpressionStatement) {
-      handleExpressionStatement(iASTExpressionStatement, fileloc);
-    } else if (statement instanceof IASTIfStatement iASTIfStatement) {
-      handleIfStatement(iASTIfStatement, fileloc);
-    } else if (statement instanceof IASTWhileStatement iASTWhileStatement) {
-      handleWhileStatement(iASTWhileStatement, fileloc);
-    } else if (statement instanceof IASTForStatement iASTForStatement) {
-      return handleForStatement(iASTForStatement, fileloc);
-    } else if (statement instanceof IASTBreakStatement iASTBreakStatement) {
-      handleBreakStatement(iASTBreakStatement, fileloc);
-    } else if (statement instanceof IASTContinueStatement iASTContinueStatement) {
-      handleContinueStatement(iASTContinueStatement, fileloc);
-    } else if (statement instanceof IASTLabelStatement iASTLabelStatement) {
-      handleLabelStatement(iASTLabelStatement, fileloc);
-    } else if (statement instanceof IASTGotoStatement iASTGotoStatement) {
-      handleGotoStatement(iASTGotoStatement, fileloc);
-    } else if (statement instanceof IASTReturnStatement iASTReturnStatement) {
-      handleReturnStatement(iASTReturnStatement, fileloc);
-    } else if (statement instanceof IASTSwitchStatement iASTSwitchStatement) {
-      return handleSwitchStatement(iASTSwitchStatement, fileloc);
-    } else if (statement instanceof IASTCaseStatement iASTCaseStatement) {
-      handleCaseStatement(iASTCaseStatement, fileloc);
-    } else if (statement instanceof IASTDefaultStatement iASTDefaultStatement) {
-      handleDefaultStatement(iASTDefaultStatement, fileloc);
-    } else if (statement instanceof IASTNullStatement) {
-      // We really don't care about blank statements
-    } else if (statement instanceof IASTDeclarationStatement) {
-      // these are handled by visit(IASTDeclaration)
-    } else if (statement instanceof IASTProblemStatement iASTProblemStatement) {
-      visit(iASTProblemStatement.getProblem());
-    } else if (statement instanceof IASTDoStatement iASTDoStatement) {
-      handleDoWhileStatement(iASTDoStatement, fileloc);
-    } else {
-      throw parseContext.parseError(
-          "Unknown AST node " + statement.getClass().getSimpleName(), statement);
+      case IASTNullStatement nullStatement -> {
+        // We really don't care about blank statements
+      }
+      case IASTDeclarationStatement declarationStatement -> {
+        // these are handled by visit(IASTDeclaration)
+      }
+      case IASTProblemStatement iASTProblemStatement -> visit(iASTProblemStatement.getProblem());
+
+      case IASTDoStatement iASTDoStatement -> handleDoWhileStatement(iASTDoStatement, fileloc);
+
+      default ->
+          throw parseContext.parseError(
+              "Unknown AST node " + statement.getClass().getSimpleName(), statement);
     }
 
     return PROCESS_CONTINUE;
@@ -730,7 +734,7 @@ class CFAFunctionBuilder extends ASTVisitor {
         List<Pair<IASTExpression, CIdExpression>> tempVars =
             sideAssignmentStack.getConditionalExpressions();
         if ((tempVars.size() == 1)
-            && (tempVars.get(0).getSecond() == cExpressionStatement.getExpression())) {
+            && (tempVars.getFirst().getSecond() == cExpressionStatement.getExpression())) {
           resultIsUsed = false;
         }
       }
@@ -950,7 +954,7 @@ class CFAFunctionBuilder extends ASTVisitor {
 
       if (isReachableNode(prevNode)) {
 
-        for (CFAEdge prevEdge : CFAUtils.allEnteringEdges(prevNode).toList()) {
+        for (CFAEdge prevEdge : prevNode.getAllEnteringEdges().toList()) {
           if ((prevEdge instanceof BlankEdge) && prevEdge.getDescription().isEmpty()) {
 
             // the only entering edge is a BlankEdge, so we delete this edge and prevNode
@@ -2145,7 +2149,7 @@ class CFAFunctionBuilder extends ASTVisitor {
       // ignore side assignment
       sideAssignmentStack.getAndResetPreSideAssignments();
 
-      prevNode = handleConditionalExpression(prevNode, condExps.get(0).getFirst(), null);
+      prevNode = handleConditionalExpression(prevNode, condExps.getFirst().getFirst(), null);
 
     } else {
 
@@ -2183,19 +2187,17 @@ class CFAFunctionBuilder extends ASTVisitor {
 
   private CFANode handleConditionalExpression(
       final CFANode prevNode, final IASTExpression condExp, final @Nullable CIdExpression tempVar) {
-    if (condExp instanceof IASTConditionalExpression iASTConditionalExpression) {
-      return handleTernaryOperator(iASTConditionalExpression, prevNode, tempVar);
-    } else if (condExp instanceof IASTBinaryExpression iASTBinaryExpression) {
-      return handleShortcuttingOperators(iASTBinaryExpression, prevNode, tempVar);
-    } else if (condExp
-        instanceof IGNUASTCompoundStatementExpression iGNUASTCompoundStatementExpression) {
-      return handleCompoundStatementExpression(
-          iGNUASTCompoundStatementExpression, prevNode, tempVar);
-    } else if (condExp instanceof IASTExpressionList iASTExpressionList) {
-      return handleExpressionList(iASTExpressionList, prevNode, tempVar);
-    } else {
-      throw new AssertionError();
-    }
+    return switch (condExp) {
+      case IASTConditionalExpression iASTConditionalExpression ->
+          handleTernaryOperator(iASTConditionalExpression, prevNode, tempVar);
+      case IASTBinaryExpression iASTBinaryExpression ->
+          handleShortcuttingOperators(iASTBinaryExpression, prevNode, tempVar);
+      case IGNUASTCompoundStatementExpression iGNUASTCompoundStatementExpression ->
+          handleCompoundStatementExpression(iGNUASTCompoundStatementExpression, prevNode, tempVar);
+      case IASTExpressionList iASTExpressionList ->
+          handleExpressionList(iASTExpressionList, prevNode, tempVar);
+      default -> throw new AssertionError();
+    };
   }
 
   /**
@@ -2523,7 +2525,7 @@ class CFAFunctionBuilder extends ASTVisitor {
       boolean resultIsUsed =
           (tempVar != null)
               || (sideAssignmentStack.getConditionalExpressions().size() > 1)
-              || (exp != sideAssignmentStack.getConditionalExpressions().get(0).getSecond());
+              || (exp != sideAssignmentStack.getConditionalExpressions().getFirst().getSecond());
 
       prevNode =
           handleAllSideEffects(prevNode, fileLocation, condExp.getRawSignature(), resultIsUsed);
