@@ -88,10 +88,10 @@ import org.sosy_lab.cpachecker.cfa.types.c.CPointerType;
 import org.sosy_lab.cpachecker.cfa.types.c.CSimpleType;
 import org.sosy_lab.cpachecker.cfa.types.c.CStorageClass;
 import org.sosy_lab.cpachecker.cfa.types.c.CType;
+import org.sosy_lab.cpachecker.cfa.types.c.CTypeQualifiers;
 import org.sosy_lab.cpachecker.cfa.types.c.CVoidType;
 import org.sosy_lab.cpachecker.exceptions.UnrecognizedCodeException;
 import org.sosy_lab.cpachecker.util.CFATraversal;
-import org.sosy_lab.cpachecker.util.CFAUtils;
 import org.sosy_lab.cpachecker.util.Pair;
 import org.sosy_lab.cpachecker.util.floatingpoint.FloatValue;
 import org.sosy_lab.llvm_j.BasicBlock;
@@ -299,10 +299,10 @@ class CFABuilder {
         CFATraversal.dfs().collectNodesReachableFromTo(pBlock.getEntryNode(), pBlock.getExitNode());
 
     for (CFANode toRemove : blockNodes) {
-      for (CFAEdge enteringEdge : CFAUtils.allEnteringEdges(toRemove)) {
+      for (CFAEdge enteringEdge : toRemove.getAllEnteringEdges()) {
         enteringEdge.getPredecessor().removeLeavingEdge(enteringEdge);
       }
-      for (CFAEdge leavingEdge : CFAUtils.allLeavingEdges(toRemove)) {
+      for (CFAEdge leavingEdge : toRemove.getAllLeavingEdges()) {
         leavingEdge.getSuccessor().removeEnteringEdge(leavingEdge);
       }
     }
@@ -519,11 +519,11 @@ class CFABuilder {
         CExpression conditionForElse = getBranchConditionForElse(condition, pFileName);
         CExpression trueValue = getExpression(valueIf, ifType, pFileName);
         CStatement trueAssignment =
-            (CStatement) getAssignStatement(i, trueValue, funcName, pFileName).get(0);
+            (CStatement) getAssignStatement(i, trueValue, funcName, pFileName).getFirst();
         // we can use ifType again, since ifType == elseType for `select` instruction
         CExpression falseValue = getExpression(valueElse, ifType, pFileName);
         CStatement falseAssignment =
-            (CStatement) getAssignStatement(i, falseValue, funcName, pFileName).get(0);
+            (CStatement) getAssignStatement(i, falseValue, funcName, pFileName).getFirst();
 
         CFANode trueNode = newNode(pFunction);
         CFANode falseNode = newNode(pFunction);
@@ -1601,7 +1601,7 @@ class CFABuilder {
   }
 
   private CType getPointerOfType(final CType type) {
-    return new CPointerType(false, false, type);
+    return new CPointerType(CTypeQualifiers.NONE, type);
   }
 
   private CExpression getReference(FileLocation fileLocation, CExpression expr) {
