@@ -21,10 +21,10 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.SequencedMap;
 import org.sosy_lab.cpachecker.cfa.model.CFAEdge;
 import org.sosy_lab.cpachecker.cfa.model.CFANode;
 import org.sosy_lab.cpachecker.core.algorithm.distributed_summaries.decomposition.graph.BlockNodeWithoutGraphInformation;
-import org.sosy_lab.cpachecker.util.CFAUtils;
 
 public class STBridges {
 
@@ -73,7 +73,7 @@ public class STBridges {
         for (CFANode cfaNode : connection) {
           boolean hasSuccessorInIncludes = false;
           boolean hasSuccessorOutOfIncludes = false;
-          for (CFAEdge leavingEdge : CFAUtils.leavingEdges(cfaNode)) {
+          for (CFAEdge leavingEdge : cfaNode.getLeavingEdges()) {
             if (includes.contains(leavingEdge.getSuccessor())) {
               connectionEdges.add(leavingEdge);
               hasSuccessorInIncludes = true;
@@ -95,7 +95,7 @@ public class STBridges {
 
           boolean hasPredecessorInIncludes = false;
           boolean hasPredecessorOutOfIncludes = false;
-          for (CFAEdge enteringEdge : CFAUtils.enteringEdges(cfaNode)) {
+          for (CFAEdge enteringEdge : cfaNode.getEnteringEdges()) {
             if (includes.contains(enteringEdge.getPredecessor())) {
               hasPredecessorInIncludes = true;
             } else {
@@ -139,7 +139,7 @@ public class STBridges {
     Deque<List<CFAEdge>> paths = new ArrayDeque<>();
     CFANode mainFunction = blockNode.getInitialLocation();
     CFANode exitNode = blockNode.getFinalLocation();
-    for (CFAEdge leavingEdge : CFAUtils.leavingEdges(mainFunction)) {
+    for (CFAEdge leavingEdge : mainFunction.getLeavingEdges()) {
 
       if (blockNode.getEdges().contains(leavingEdge)) {
         List<CFAEdge> path = new ArrayList<>();
@@ -149,12 +149,12 @@ public class STBridges {
     }
     while (!paths.isEmpty()) {
       List<CFAEdge> currentPath = paths.removeFirst();
-      CFAEdge lastEdge = currentPath.get(currentPath.size() - 1);
+      CFAEdge lastEdge = currentPath.getLast();
       CFANode lastNode = lastEdge.getSuccessor();
       if (lastNode.equals(exitNode)) {
         return currentPath;
       }
-      for (CFAEdge leavingEdge : CFAUtils.leavingEdges(lastNode)) {
+      for (CFAEdge leavingEdge : lastNode.getLeavingEdges()) {
         if (blockNode.getEdges().contains(leavingEdge)) {
           List<CFAEdge> copy = new ArrayList<>(currentPath);
           copy.add(leavingEdge);
@@ -173,7 +173,7 @@ public class STBridges {
    * @return All s-t bridges in <code>pCFA</code>.
    */
   public static BridgeComponents computeBridges(BlockNodeWithoutGraphInformation blockNode) {
-    Map<CFANode, Integer> comp = new LinkedHashMap<>();
+    SequencedMap<CFANode, Integer> comp = new LinkedHashMap<>();
     CFANode exitNode = blockNode.getFinalLocation();
 
     for (CFANode node : blockNode.getNodes()) {
@@ -231,7 +231,7 @@ public class STBridges {
       CFANode pNode, List<CFAEdge> pFlipped, BlockNodeWithoutGraphInformation blockNode) {
     ImmutableSet<CFAEdge> copy = ImmutableSet.copyOf(pFlipped);
     ImmutableSet.Builder<CFANode> successors = ImmutableSet.builder();
-    for (CFAEdge leavingEdge : CFAUtils.leavingEdges(pNode)) {
+    for (CFAEdge leavingEdge : pNode.getLeavingEdges()) {
       if (!copy.contains(leavingEdge) && blockNode.getEdges().contains(leavingEdge)) {
         successors.add(leavingEdge.getSuccessor());
       }
