@@ -61,9 +61,9 @@ public class ARGInPlaceSubtreeRemover extends ARGSubtreeRemover {
     final ARGState firstState = (ARGState) mainReachedSet.asReachedSet().getFirstState();
     final ARGState lastState = (ARGState) mainReachedSet.asReachedSet().getLastState();
 
-    assert pPath.asStatesList().get(0).getWrappedState() == firstState
+    assert pPath.asStatesList().getFirst().getWrappedState() == firstState
         : "path should start with root state";
-    assert Iterables.getLast(pPath.asStatesList()).getWrappedState() == lastState
+    assert pPath.asStatesList().getLast().getWrappedState() == lastState
         : "path should end with target state";
     assert lastState.isTarget();
 
@@ -112,7 +112,7 @@ public class ARGInPlaceSubtreeRemover extends ARGSubtreeRemover {
     } else {
       assert !relevantCallStates.isEmpty();
       // first remove the cut-state directly
-      BackwardARGState lastRelevantState = Iterables.getLast(relevantCallStates);
+      BackwardARGState lastRelevantState = relevantCallStates.getLast();
       removeCachedSubtree(
           getReachedState(lastRelevantState),
           blockInitAndExitStates.get(lastRelevantState),
@@ -121,7 +121,7 @@ public class ARGInPlaceSubtreeRemover extends ARGSubtreeRemover {
           pNewPrecisionTypes);
 
       // then remove some important states along the path, sufficient for re-exploration
-      final ARGState lastRelevantNode = getReachedState(Iterables.getLast(relevantCallStates));
+      final ARGState lastRelevantNode = getReachedState(relevantCallStates.getLast());
       final Function<ARGState, Pair<List<Precision>, List<Predicate<? super Precision>>>>
           precUpdate =
               stateToRemove -> {
@@ -149,7 +149,7 @@ public class ARGInPlaceSubtreeRemover extends ARGSubtreeRemover {
             p.getSecond());
       }
 
-      if (Objects.equals(firstState, relevantCallStates.get(0).getARGState())
+      if (Objects.equals(firstState, relevantCallStates.getFirst().getARGState())
           && AbstractStates.isTargetState(lastState)) {
         // old code:
         // the main-reachedset contains only the root, exit-states and targets.
@@ -157,7 +157,7 @@ public class ARGInPlaceSubtreeRemover extends ARGSubtreeRemover {
         assert firstState.getChildren().contains(lastState);
         mainReachedSet.removeSubtree(lastState);
       } else {
-        BackwardARGState stateToRemove = relevantCallStates.get(0);
+        BackwardARGState stateToRemove = relevantCallStates.getFirst();
         Pair<List<Precision>, List<Predicate<? super Precision>>> p =
             precUpdate.apply(stateToRemove.getARGState());
         mainReachedSet.removeSubtree(stateToRemove.getARGState(), p.getFirst(), p.getSecond());
